# GlHash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Colors/: colori.cpp  colori.txt  coloriSfondo.txt  offsetVertices.txt
common/: Pixel.cpp  ReadBuffer.cpp  ReadBuffer.h  definitions.h  glhash.cpp  glhash.h  readBMP.cpp  readBMP.h  sha256.cpp  sha256.h  shader.cpp  shader.hpp
